--- a/practice/index.html
+++ b/practice/index.html
@@ -15,7 +15,7 @@
 <!--<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"-->
         <!--integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"-->
         <!--crossorigin="anonymous"></script>-->
-<script src="tests.js"></script>
+<script src="moreDecorators.js"></script>
 </body>
 
 </html>
